# beeek18_streamlit_app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
pages/: 1_apple.py  2_tips.py
