[project]
name = "beeek18-streamlit-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "seaborn>=0.13.2",
    "streamlit>=1.54.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "ty>=0.0.20",
]
